Added and modified more code

--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-
-
+        <link href="./login.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="login-template">
         <h1>Login Here</h1>
         <form>
             <div>
