--- a/forgot-password.html
+++ b/forgot-password.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i|Roboto:400,400i,700,700i&display=swap" rel="stylesheet">
         <link href="global.css" rel="stylesheet">
-        <title>Login</title>
+        <title>Forgot Password</title>
     </head>
     <body>
         <div class="main-content">
@@ -32,27 +32,20 @@
             </section>
             <section class="siteform-comp">
                 <div class="siteform-content">
-                    <div class="form-group">
-                        Don't have an account? <a href="register.html">Register now</a>.
-                    </div>
-                    <h1>Login</h1>
+                    <h1>Forgot Password?</h1>
                     <form>
                         <div class="form-group">
                             <label for="user_email">Enter your registered email</label>
                             <input id="user_email" type="email" placeholder="Email">
                         </div>
                         <div class="form-group">
-                            <label for="user_password">Enter your password</label>
-                            <input id="user_password" type="password" placeholder="Password">
+                            <label for="user_password">Enter following captcha</label>
+                            <div id="recaptcha">
+
+                            </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="primary">Login</button>
-                        </div>
-                        <div class="form-group">
-                            <label for="user_loggedin"><input type="checkbox" id="user_loggedin"> Keep me logged in</label>
-                        </div>
-                        <div class="form-group">
-                            <a href="forgot-password.html">Forgot Password?</a>
+                            <button type="submit" class="primary">Send Email</button>
                         </div>
                     </form>
                 </div>
@@ -64,4 +57,12 @@
             </footer>
         </section>
     </body>
+    <script src="https://www.google.com/recaptcha/api.js?render=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></script>
+    <script>
+        grecaptcha.ready(function () {
+            grecaptcha.render('recaptcha', {
+            'sitekey' : '6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI'
+            });
+        });
+    </script>
 </html>
