--- a/index.html
+++ b/index.html
@@ -1,11 +1,221 @@
 <!DOCTYPE html>
 <html>
     <head>
-
-
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i|Roboto:400,400i,700,700i&display=swap" rel="stylesheet">
+        <link href="global.css" rel="stylesheet">
+        <title>Home</title>
     </head>
     <body>
-
-        
+        <div class="main-content">
+            <section class="siteheader-comp">
+                <header>
+                    <a href="index.html" class="site-logo">DigitalLync</a>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="index.html"><i class="material-icons">home</i>Home</a>
+                            </li>
+                            <li>
+                                <a href="login.html"><i class="material-icons">account_circle</i>Login/Register</a>
+                            </li>
+                            <li>
+                                <a href="cart.html"><i class="material-icons">shopping_cart</i>View Cart</a>
+                            </li>
+                            <li>
+                                <a href="contact.html"><i class="material-icons">phone</i>Contact Us</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
+            </section>
+            <div class="items-grid">
+                <h1>New Items</h1>
+                <div class="flex-grid">
+                    <div class="col">
+                        <article class="product-item">
+                            <div class="img-content">
+                                <img src="https://via.placeholder.com/360x360.png">
+                            </div>
+                            <h3>Product 1</h3>
+                            <div class="ratings-content">
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                            </div>
+                            <div class="desc-content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius quis orci nec hendrerit.
+                            </div>
+                            <div class="btn-holder">
+                                <button type="button" class="primary">Buy now</button>
+                                <button type="button" class="secondary">Add to cart</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col">
+                        <article class="product-item">
+                            <div class="img-content">
+                                <img src="https://via.placeholder.com/360x360.png">
+                            </div>
+                            <h3>Product 2</h3>
+                            <div class="ratings-content">
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                            </div>
+                            <div class="desc-content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius quis orci nec hendrerit.
+                            </div>
+                            <div class="btn-holder">
+                                <button type="button" class="primary">Buy now</button>
+                                <button type="button" class="secondary">Add to cart</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col">
+                        <article class="product-item">
+                            <div class="img-content">
+                                <img src="https://via.placeholder.com/360x360.png">
+                            </div>
+                            <h3>Product 3</h3>
+                            <div class="ratings-content">
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                            </div>
+                            <div class="desc-content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius quis orci nec hendrerit.
+                            </div>
+                            <div class="btn-holder">
+                                <button type="button" class="primary">Buy now</button>
+                                <button type="button" class="secondary">Add to cart</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col">
+                        <article class="product-item">
+                            <div class="img-content">
+                                <img src="https://via.placeholder.com/360x360.png">
+                            </div>
+                            <h3>Product 4</h3>
+                            <div class="ratings-content">
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                            </div>
+                            <div class="desc-content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius quis orci nec hendrerit.
+                            </div>
+                            <div class="btn-holder">
+                                <button type="button" class="primary">Buy now</button>
+                                <button type="button" class="secondary">Add to cart</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col">
+                        <article class="product-item">
+                            <div class="img-content">
+                                <img src="https://via.placeholder.com/360x360.png">
+                            </div>
+                            <h3>Product 5</h3>
+                            <div class="ratings-content">
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                            </div>
+                            <div class="desc-content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius quis orci nec hendrerit.
+                            </div>
+                            <div class="btn-holder">
+                                <button type="button" class="primary">Buy now</button>
+                                <button type="button" class="secondary">Add to cart</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col">
+                        <article class="product-item">
+                            <div class="img-content">
+                                <img src="https://via.placeholder.com/360x360.png">
+                            </div>
+                            <h3>Product 6</h3>
+                            <div class="ratings-content">
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                            </div>
+                            <div class="desc-content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius quis orci nec hendrerit.
+                            </div>
+                            <div class="btn-holder">
+                                <button type="button" class="primary">Buy now</button>
+                                <button type="button" class="secondary">Add to cart</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col">
+                        <article class="product-item">
+                            <div class="img-content">
+                                <img src="https://via.placeholder.com/360x360.png">
+                            </div>
+                            <h3>Product 7</h3>
+                            <div class="ratings-content">
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                            </div>
+                            <div class="desc-content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius quis orci nec hendrerit.
+                            </div>
+                            <div class="btn-holder">
+                                <button type="button" class="primary">Buy now</button>
+                                <button type="button" class="secondary">Add to cart</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col">
+                        <article class="product-item">
+                            <div class="img-content">
+                                <img src="https://via.placeholder.com/360x360.png">
+                            </div>
+                            <h3>Product 8</h3>
+                            <div class="ratings-content">
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                                <i class="material-icons">star</i>
+                            </div>
+                            <div class="desc-content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius quis orci nec hendrerit.
+                            </div>
+                            <div class="btn-holder">
+                                <button type="button" class="primary">Buy now</button>
+                                <button type="button" class="secondary">Add to cart</button>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="sitefooter-comp">
+            <footer>
+                &copy; DigitalLync
+            </footer>
+        </section>
     </body>
 </html>
